@@ -25,6 +25,7 @@ x2gokdrive (0.0.0.1-0x2go1) UNRELEASED; urgency=medium
     - (re)enable sessions debugging.
     - fix infinite loop if reading of cookie has failed.
     - improve initialization of cursor frame and cache element structures.
+    - improve clearing of the frame list.
 
   [ Mihai Moldovan ]
   * Initial release:
